--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,6 +46,26 @@ p {
   font-size: 24px;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 1.5;
+}
+
+.about-section h2 {
+  font-size: 18px;
+}
+
+.about-section p {
+  font-size: 16px;
+}
+
+.about.section.content {
+  margin: 30px;
+}
 .btn-branding {
   background-color: var(--branding-color);
   color: white;
@@ -68,6 +88,10 @@ p {
   padding: 120px 60px;
 }
 
+.my-picture {
+  border-radius: 7px;
+}
+
 @media (max-width: 960px) {
   h1 {
     font-size: 60px;
@@ -81,5 +105,13 @@ p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
+
+  .about-section a {
+    margin: 0 0 20px 0;
   }
 }
