--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,9 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
 p {
   font-weight: normal;
   font-size: 16px;
@@ -152,12 +155,56 @@ nav li.active a {
   color: var(--branding-color);
 }
 
+footer .email-link {
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
+
 @media (max-width: 960px) {
   h1 {
     font-size: 60px;
   }
   h2 {
     font-size: 42px;
+  }
+
+  h4 {
+    font-size: 26px;
+  }
+
+  .btn {
+    font-size: 18px;
   }
   .hero {
     padding: 80px 20px;
@@ -189,5 +236,9 @@ nav li.active a {
 
   .content-container image {
     text-align: center;
+  }
+
+  footer .contact-box {
+    padding: 30px;
   }
 }
